# glacier-push

./: LICENSE  README.md  cabal.project  cabal.project.freeze  glacier-push.cabal  hie.yaml_____  stack.yaml
app/: Main.hs  Treehash.hs
c/: treehash.c  treehash.h
src/: Push.hs  TreehashFFI.hs
test/: Spec.hs
