name:                glacier-push
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carlohamalainen/glacier-push
license:             MIT
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
copyright:           2017 Carlo Hamalainen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable glacier-push-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-glacier
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , cryptohash-sha256
                     , katip
                     , lens
                     , safe-exceptions
                     , string-conversions
                     , text
                     , unix-compat
                     , resourcet
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlohamalainen/glacier-push
