name:                glacier-push
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carlohamalainen/glacier-push
license:             MIT
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
copyright:           2017 Carlo Hamalainen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Push
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , cryptonite
                     , memory
                     , string-conversions
                     , amazonka
                     , amazonka-core
                     , amazonka-glacier
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , katip
                     , lens
                     , safe-exceptions
                     , string-conversions
                     , text
                     , unix-compat
                     , resourcet
                     , QuickCheck
                     , deepseq
  default-language:    Haskell2010

executable glacier-push-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , safe-exceptions
                     , glacier-push
                     , katip
  default-language:    Haskell2010

executable treehash-exe
  hs-source-dirs:      app
  main-is:             Treehash.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , safe-exceptions
                     , glacier-push
                     , katip
                     , criterion
  default-language:    Haskell2010

test-suite glacier-push-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , glacier-push
                     , string-conversions
                     , cryptonite
                     , memory
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlohamalainen/glacier-push
