name:                glacier-push
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carlohamalainen/glacier-push
license:             MIT
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
copyright:           2017 Carlo Hamalainen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Push
                     , TreehashFFI
  build-depends:       amazonka
                     , amazonka-core
                     , amazonka-glacier
                     , base
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , cryptohash-sha256
                     , cryptonite
                     , deepseq
                     , katip
                     , katip 
                     , lens
                     , memory
                     , QuickCheck
                     , resourcet
                     , safe-exceptions
                     , string-conversions
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unix
                     , unix-compat
  default-language:    Haskell2010
  ghc-options:         -Wall

executable glacier-push-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       amazonka
                     , amazonka-core
                     , amazonka-glacier
                     , base
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , cryptohash-sha256
                     , cryptonite
                     , deepseq
                     , katip
                     , katip 
                     , lens
                     , memory
                     , QuickCheck
                     , resourcet
                     , safe-exceptions
                     , string-conversions
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unix
                     , unix-compat

                     , glacier-push

  default-language:    Haskell2010
  c-sources:           c/treehash.c
  cc-options:          -Wall -O2 -fno-omit-frame-pointer
  extra-libraries:     ssl crypto m

executable treehash-exe
  hs-source-dirs:      app
  main-is:             Treehash.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       amazonka
                     , amazonka-core
                     , amazonka-glacier
                     , base
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , cryptohash-sha256
                     , cryptonite
                     , deepseq
                     , katip
                     , katip 
                     , lens
                     , memory
                     , QuickCheck
                     , resourcet
                     , safe-exceptions
                     , string-conversions
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unix
                     , unix-compat

                     , glacier-push

  default-language:    Haskell2010
  c-sources:           c/treehash.c
  cc-options:          -Wall -O2 -fno-omit-frame-pointer
  extra-libraries:     ssl crypto m

test-suite glacier-push-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       amazonka
                     , amazonka-core
                     , amazonka-glacier
                     , base
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , cryptohash-sha256
                     , cryptonite
                     , deepseq
                     , katip
                     , katip 
                     , lens
                     , memory
                     , QuickCheck
                     , resourcet
                     , safe-exceptions
                     , string-conversions
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unix
                     , unix-compat

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlohamalainen/glacier-push
